--- a/src/style/adventCard.module.css
+++ b/src/style/adventCard.module.css
@@ -1,11 +1,54 @@
-.paper {
+.activePaper {
   background-color: white;
-  color: var(--mantine-color-blue-7);
   padding: 1rem;
-  width: 20%;
+  min-width: 25%;
+  max-width: 50%;
 
   h4 {
     margin: 5px;
     font-size: 2em;
+  }
+  svg {
+    width: 5rem;
+    height: 5rem;
+    color: var(--mantine-color-blue-7);
+    @media (max-width: em(576)) {
+      margin: 20px;
+      width: 5rem;
+      height: 5rem;
+    }
+  }
+
+  button {
+    margin: auto;
+  }
+}
+
+.disabledPaper {
+  background-color: white;
+  color: grey;
+  padding: 1rem;
+  min-width: 25%;
+  max-width: 50%;
+  filter: blur(4px);
+
+  h4 {
+    margin: 5px;
+    font-size: 2em;
+  }
+  svg {
+    width: 5rem;
+    height: 5rem;
+    color: grey;
+    @media (max-width: em(576)) {
+      margin: 20px;
+      width: 5rem;
+      height: 5rem;
+    }
+  }
+
+  button {
+    color: grey;
+    text-align: center;
   }
 }
