--- a/src/style/adventCard.module.css
+++ b/src/style/adventCard.module.css
@@ -2,10 +2,15 @@
   background-color: white;
   color: var(--mantine-color-blue-7);
   padding: 1rem;
-  width: 20%;
-
+  min-width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   h4 {
     margin: 5px;
     font-size: 2em;
+  }
+  svg {
+    margin:auto;
   }
 }
