--- a/src/style/hero.module.css
+++ b/src/style/hero.module.css
@@ -4,14 +4,16 @@
   justify-content: center;
   margin: 3rem;
 
-  @media (max-width: em(576)) {
+  @media (max-width: em(651)) {
     flex-direction: column;
     align-items: center;
     margin: 1rem;
   }
 }
+
 .hero h2 {
   color: var(--mantine-color-blue-7);
+  text-align:center;
 }
 
 .icon {
@@ -19,7 +21,7 @@
   height: 10rem;
   color: var(--mantine-color-blue-7);
   margin-right: 50px;
-  @media (max-width: em(576)) {
+  @media (max-width: em(651)) {
     margin: 20px;
     width: 5rem;
     height: 5rem;
