--- a/src/style/hero.module.css
+++ b/src/style/hero.module.css
@@ -13,7 +13,7 @@
 
 .hero h2 {
   color: var(--mantine-color-blue-7);
-  text-align:center;
+  text-align: center;
 }
 
 .icon {
@@ -26,4 +26,11 @@
     width: 5rem;
     height: 5rem;
   }
+}
+
+.logo {
+  color: var(--mantine-color-blue-7);
+  position: absolute;
+  top: 3rem;
+  left: 5rem;
 }
