--- a/src/style/adventCard.module.css
+++ b/src/style/adventCard.module.css
@@ -1,13 +1,20 @@
 .activePaper {
   background-color: white;
+  height: 240px;
   padding: 1rem;
-  height: 215px;
   width: 190px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-  h4 {
+  h3 {
     margin: 5px;
     font-size: 2em;
     color: var(--mantine-color-blue-7);
+  }
+
+  h4 {
+    min-height: 53px;
   }
   svg {
     width: 5rem;
@@ -29,16 +36,20 @@
   background-color: white;
   color: grey;
   padding: 1rem;
-  height: 215px;
   width: 190px;
+  height: 240px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  filter: blur(4px);
-
-  h4 {
+  filter: blur(1px);
+  h3 {
     margin: 5px;
     font-size: 2em;
+    color: var(--mantine-color-blue-7);
+  }
+
+  h4 {
+    min-height: 53px;
   }
   svg {
     width: 5rem;
@@ -61,16 +72,20 @@
   flex-direction: column;
   justify-content: space-around;
   background-color: white;
-  height: 215px;
   width: 190px;
+  height: 240px;
   padding: 1rem;
   cursor: pointer;
 
   h3 {
     margin: 5px;
-    font-size: 1em;
+    font-size: 2em;
+    color: var(--mantine-color-blue-7);
   }
 
+  h4 {
+    min-height: 53px;
+  }
   img {
     filter: grayscale(1);
   }
